<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh_title"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="90"
        app:showAsAction="ifRoom"
        android:title="@string/action_filter_title">

        <menu>
            <group android:id="@+id/action_filter_group">
                <item android:id="@+id/action_filter_popular"
                    android:title="@string/action_filter_popular_title"/>

                <item android:id="@+id/action_filter_top_rated"
                    android:title="@string/action_filter_top_rated"/>

                <item android:id="@+id/action_filter_favorite"
                    android:title="@string/action_filter_favorite"/>
            </group>
        </menu>

    </item>

</menu>