<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movie_image_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_movie_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_movie_rating"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/movie_rating_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/default_margin_top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_movie_release_date"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/default_margin_top" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_movie_overview"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top" />

            <TextView
                android:id="@+id/trailer_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_activity_trailers"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top" />

            <TextView
                android:id="@+id/reviews_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="@dimen/default_margin_top"
                android:text="@string/detail_activity_revices_tv"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin_bottom"
                android:layout_marginTop="@dimen/default_margin_top" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>